[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Hub-Games"
version = "0.1.3"
description = "A CLI Python hub to play multiple games: Rock Paper Scissors, Tic Tac Toe, and Guess the Number"
authors = [
  { name = "uzi" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []
keywords = ["game", "CLI", "python", "rps", "tic-tac-toe", "guess-number"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
gamehub = "gamehub.main:main"

[project.urls]
Repository = "https://github.com/rick-rocks123/Game_Hub"